--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
 //Variables de entorno
 
-PORT=3005
-DB_CNN=mongodb+srv://zarpax:6g8plT9cLjsIkdX4@cluster0.hfonw.mongodb.net/test
+PORT=3000
+DB_CNN=mongodb+srv://zarpax:6g8plT9cLjsIkdX4@cluster0.hfonw.mongodb.net/hospitaldb
